# OpenClaw-Hyperliquid

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs  types.rs  wallet.rs
crates/execution/: Cargo.toml
crates/execution/src/: client.rs  lib.rs  order_manager.rs  paper_trader.rs  position_tracker.rs
crates/infra/: Cargo.toml
crates/infra/src/: binance.rs  dashboard.rs  grpc.rs  lib.rs  metrics.rs  telegram.rs
crates/risk/: Cargo.toml
crates/risk/src/: circuit_breaker.rs  correlation.rs  drawdown.rs  kelly.rs  lib.rs  margin.rs  portfolio.rs
crates/strategy/: Cargo.toml
crates/strategy/src/: basis_trade.rs  funding_arb.rs  lib.rs  liquidation.rs  llm_signal.rs  market_maker.rs  momentum.rs  stat_arb.rs
deploy/: hyperliquid-trader.service
proto/: signals.proto
scripts/: funding-monitor.sh  portfolio.sh
src/: main.rs
