[workspace]
members = ["crates/core", "crates/data", "crates/strategy", "crates/execution", "crates/risk", "crates/infra"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Massimo Mazza"]
license = "MIT"

[workspace.dependencies]
# Internal crates
hl-core = { path = "crates/core" }
hl-data = { path = "crates/data" }
hl-strategy = { path = "crates/strategy" }
hl-execution = { path = "crates/execution" }
hl-risk = { path = "crates/risk" }
hl-infra = { path = "crates/infra" }

# Async
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures = "0.3"
async-trait = "0.1"

# Math
rust_decimal = { version = "1.36", features = ["serde-with-str"] }
rust_decimal_macros = "1.36"
statrs = "0.17"
ndarray = "0.16"
nalgebra = "0.33"

# Data structures
dashmap = "6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# gRPC
tonic = "0.12"
prost = "0.13"

# HTTP
reqwest = { version = "0.12", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Crypto/Signing
ethers = { version = "2", features = ["legacy"] }

# Errors
anyhow = "1"
thiserror = "2"

# UUID
uuid = { version = "1", features = ["v4"] }

[package]
name = "hyperliquid-trader"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "hyperliquid-trader"
path = "src/main.rs"

[dependencies]
hl-core.workspace = true
hl-data.workspace = true
hl-strategy.workspace = true
hl-execution.workspace = true
hl-risk.workspace = true
hl-infra.workspace = true
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde_json.workspace = true
rust_decimal.workspace = true
chrono.workspace = true
futures.workspace = true
dotenvy.workspace = true
rust_decimal_macros.workspace = true

[build-dependencies]
tonic-build = "0.12"
