[package]
name = "hl-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
ethers.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
dotenvy.workspace = true
tracing.workspace = true
async-trait.workspace = true
